--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         #map {
             height: 100%;
         }
+
         /* Optional: Makes the sample page fill the window. */
         html, body {
             height: 100%;
@@ -18,6 +19,7 @@
         }
     </style>
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <input id="origin-input" class="controls" type="text"
@@ -35,6 +37,8 @@
 
     <input type="radio" name="type" id="changemode-driving">
     <label for="changemode-driving">Driving</label>
+</div>
+<div id="details" class="alert alert-success" role="alert">
 </div>
 
 <div id="map"></div>
