--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div id="map"></div>
 
 <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBB4FzKmgQHsyzwbiWyvcxheSuGbaJHqc&libraries=places&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBB4FzKmgQHsyzwbiWyvcxheSuGbaJHqc&language=ru&region=UA&libraries=places&callback=initMap">
 </script>
 <script type="text/javascript" src="js/script.js"></script>
 </body>
