--- a/index.html
+++ b/index.html
@@ -19,30 +19,41 @@
         }
     </style>
     <link href="css/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-<input id="origin-input" class="controls" type="text"
-       placeholder="Enter an origin location">
 
-<input id="destination-input" class="controls" type="text"
-       placeholder="Enter a destination location">
-
-<div id="mode-selector" class="controls">
-    <input type="radio" name="type" id="changemode-walking" checked="checked">
-    <label for="changemode-walking">Walking</label>
-
-    <input type="radio" name="type" id="changemode-transit">
-    <label for="changemode-transit">Transit</label>
-
-    <input type="radio" name="type" id="changemode-driving">
-    <label for="changemode-driving">Driving</label>
-</div>
 <div id="details" class="alert alert-success" role="alert">
 </div>
 
 <div id="map"></div>
 
+<button class="direction" onclick="openNav()" style="cursor:pointer">
+    <i class="icon icon-direction"></i>
+    Прокласти маршрут
+</button>
+<div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <div id="mode-selector" class="controls">
+        <input type="radio" name="type" id="changemode-walking" checked="checked">
+        <label for="changemode-walking">Walking</label>
+
+        <input type="radio" name="type" id="changemode-transit">
+        <label for="changemode-transit">Transit</label>
+
+        <input type="radio" name="type" id="changemode-driving">
+        <label for="changemode-driving">Driving</label>
+    </div>
+    <input id="origin-input" class="controls" type="text"
+           placeholder="Enter an origin location">
+
+    <input id="destination-input" class="controls" type="text"
+           placeholder="Enter a destination location">
+
+</div>
+
+<h2>Animated Sidenav Example</h2>
+<p>Click on the element below to open the side navigation menu.</p>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBB4FzKmgQHsyzwbiWyvcxheSuGbaJHqc&language=ru&region=UA&libraries=places&callback=initMap">
 </script>
