change readme, added close btn

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <link href="css/style.css" rel="stylesheet">
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link rel="stylesheet" href="node_modules/materialize-css/dist/css/materialize.min.css">
 </head>
 <body>
 
@@ -14,11 +14,6 @@
 </div>
 
 <div id="map"></div>
-
-<!--<button class="direction" onclick="openNav()">-->
-    <!--<i class="icon icon-direction"></i>-->
-    <!--Прокласти маршрут-->
-<!--</button>-->
 
 <div id="mySidenav" class="sidenav">
     <ul class="nav sidebar-nav">
