--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <title>Geolocation</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <link href="css/style.css" rel="stylesheet">
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="node_modules/materialize-css/dist/css/materialize.min.css">
+    <link rel="stylesheet" href="build/css/all.style.css">
 </head>
 <body>
 
@@ -40,6 +39,6 @@
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3fBKn2N7iC6dsVYXQgAuM2TMBzaz3yV4&language=ru&region=UA&libraries=places&callback=initMap">
 </script>
-<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="build/js/all.min.js"></script>
 </body>
 </html>
